--- a/app/views/universities/show.html.erb
+++ b/app/views/universities/show.html.erb
@@ -44,7 +44,7 @@
       <h4 class="titulo"><%= best_in_place [@university], :name, :place_holder => "Click me to add content!", :activator => "#1" %>
   <a href="#" id="1"> <span class="grande fa fa-pencil-square"></span></a></h4>
 
-      <p><%= best_in_place [@university], :description, :place_holder => "Click here to edit the university description", :as => :textarea %></p>
+      <p><%= best_in_place [@university], :description, :place_holder => "Click here to edit the university description ", :as => :textarea %><span class="grande fa fa-pencil-square"></span></p>
       
       <div class="row">
       <div class="col-xs-6">
