--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -522,3 +522,31 @@ input[type="date"],input[type="name"], input[type="email"], input[type="textbox"
   text-decoration: line-through
 }
 
+.pagination {
+    font-size: 12px;
+}
+
+.pagination > * {
+    margin-right: 0.1em;
+    padding: 0.3em 0.4em;
+}
+
+.pagination a:hover {
+    background: $red none repeat scroll 0 0;
+    text-shadow: 1px 1px 1px $red;
+}
+
+.pagination a:active {
+    text-shadow: none;
+}
+
+.pagination .current {
+    background: $red none repeat scroll 0 0;
+    color: white;
+    text-shadow: 1px 1px 1px $red;
+}
+
+.pagination .disabled {
+    color: #C0C0C0;
+}
+
