--- a/app/views/careers/show.html.erb
+++ b/app/views/careers/show.html.erb
@@ -167,6 +167,13 @@
 
 </div>
 
+<script>
+  $(document).ready(function() {
+  /* Activating Best In Place */
+  jQuery(".best_in_place").best_in_place();
+});
+</script>
+
 
 <script>
 function openCity(evt, cityName) {
